#816 - Upgrade org.apache httpcomponents:httpclient upgrade from 4.5.14 to 5.5.1.